[tool.poetry]
name = "langchain-llm-app"
version = "0.1.0"
description = ""
authors = ["navkant <navkant.tyagi9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.4"
openai = "^1.52.0"
streamlit = "^1.39.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.3"
litellm = "^1.50.0"
wikipedia = "^1.4.0"
numexpr = "^2.10.1"
youtube-transcript-api = "^0.6.2"
faiss-cpu = "^1.9.0"
neo4j = "^5.25.0"
tiktoken = "^0.8.0"
langchain-experimental = "^0.3.2"
json-repair = "^0.30.0"
langchain-openai = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
